# L2CrashSender

./: .gitignore  CMakeLists.txt  README.md  command_line_parser.cpp  command_line_parser.h  common.h  crash_report_data.cpp  crash_report_data.h  crash_report_data_builder.cpp  crash_report_data_builder.h  http_client.cpp  http_client.h  log.hpp  logger.cpp  logger.h  main.cpp  main.h  utils.cpp  utils.h
